# SFE

./: .gitignore  CMakeLists.txt
examples/snake/: CMakeLists.txt  gamescreen.hxx  snake.cxx  snake.hxx
include/SFE/: event_manager.hxx  game.hxx  game_object.hxx  input.hxx  ndarray.hxx  propagate_const.hxx  resource_manager.hxx  screen.hxx  sfestd.hxx  utility.hxx  widget.hxx
src/: CMakeLists.txt  event_manager.cxx  game.cxx  game_object.cxx  input.cxx  resource_manager.cxx  screen.cxx  utility.cxx  widget.cxx
src/SFE/: event_manager.cxx  game.cxx  game_object.cxx  input.cxx  resource_manager.cxx  screen.cxx  utility.cxx  widget.cxx
test/: CMakeLists.txt  sfetests.cxx
